# amer

./: .gitignore  CLAUDE.md  README.md  README_args.md  aggregate.py  aggregate_mmlf.py  bbb.py  check_hungarian_loss.py  dataset.py  debugging.py  dist_utils.py  edit_safetensor.py  eval.py  eval.sh  eval_limit.py  eval_nq_msmarco.py  evaluation_scores.csv  gen_embed.sbatch  gen_embed_new.py  gen_ret_and_eval.py  generate_embeddings.py  get_single_answer_data.py  hyperparameter_search.sh  hyperparameter_search_single.sh  hypersearch_config.sh  hypersearch_config_qampari.sh  launch.py  length_labels.py  massive_store.py  mess_with_docs.py  mmlf.py  model.py  mteb_embed.py  multiple_or_single.py  plot_data_sim.py  plot_data_similarity_analysis.py  plot_fig2.py  plot_gaussian_results.py  plot_output_similarity.py  plot_single_vs_multi.py  (+18 more)
analysis/: analyze_gaussian.py  analyze_hyperparameter_results.py  compare.py  group_by_distance.py  oracle.py  sanity_check.py  sig_test.py  similarity.py
baselines/: mmr.SBATCH  run_base.SBATCH  run_reranking.SBATCH
berds_eval/: eval_vllm.py  run_eval.sh
configs/: eval.yaml  train.yaml  train_distributed.yaml  train_distributed_qampari.yaml  train_gaussian.yaml
data_creation/: combine_datasets.py  (+13 more)
novelty-bench/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
novelty-bench/model-lists/: ANTHROPIC_MODELS  COHERE_MODELS  GEMINI_MODELS  OPENAI_MODELS  VLLM_MODELS
novelty-bench/src/: common.py  inference.py  partition.py  score.py
novelty-bench/src/classifier/: evaluate_classifier.py  finetune_classifier.py
(+191 files in other folders)
